--- a/index.html
+++ b/index.html
@@ -102,4 +102,4 @@ input:-webkit-autofill {-webkit-text-fill-color: #333333 !important;-webkit-tran
 <li>联系客服，礼貌地询问官网链接。</li>
 </ul>
 <h2>总结</h2>
-<p>通过了解杏彩游戏的特点，我们可以使用多种方式来找到它的官网。从使用常见的搜索引擎，到关注相关媒体、社交平台和扫描二维码，甚至直接联系客服，这些方法都可以帮助我们迅速找到官网的信息。希望以上内容能帮助您顺利找到杏彩的官网，享受这款精彩的体育娱乐游戏。</p><div class="aixicai-a" id="aixicai-a-02"></div></div></div><div class="aixicai-f"><span>Copyright © 2021-2025杏彩平台</span></div></body></html>
+<p>通过了解杏彩游戏的特点，我们可以使用多种方式来找到它的官网。从使用常见的搜索引擎，到关注相关媒体、社交平台和扫描二维码，甚至直接联系客服，这些方法都可以帮助我们迅速找到官网的信息。希望以上内容能帮助您顺利找到杏彩的官网，享受这款精彩的体育娱乐游戏。</p><div class="aixicai-a" id="aixicai-a-02"></div></div><div class="aixicai"><h2>杏彩平台最新消息</h2><ul class="aixicai-l"><li><a href="/html/001/001/t2.html">杏彩经济：乡村旅游的“粉色黄金”</a></li><li><a href="/html/001/001/t1.html">杏彩：自然与人文交织的绚烂之美</a></li></ul></div></div><div class="aixicai-f"><span>Copyright © 2021-2025杏彩平台</span></div></body></html>
